# 1k-deaths

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  example-config.toml  run-app.sh  run-tests.sh  rustfmt.toml
notes/: .technical-back-color.xml  game.rtf  technical.rtf  todo.rtf
old/: build.rs  technical.rtf
old-src/: backend.rs  build-up1.rs  main.rs  terminal.rs
old-src/backend/: arena.rs  interactions.rs  level.rs  make.rs  old_pov.rs  persistence.rs  scheduler.rs
old-src/terminal/: context_menu.rs  examine_mode.rs  help.rs  main_mode.rs  map_view.rs  mode.rs  replay_mode.rs  text_view.rs  ui.rs
old/scripts/: sound_prob.py
old/src/: backend.rs  main.rs
old/src/backend/: actions.rs  objects.rs  old_pov.rs  pov.rs  primitives.rs  store.rs  time.rs  type_id.rs
old/src/backend/maps/: start.txt
old/src/backend/primitives/: path_find.rs  vec2d.rs
old/src/backend/snapshots/: one_thousand_deaths__backend__player_actions__tests__move_into_water.snap
old/src/terminal/: help.rs  main_mode.rs  replay_mode.rs  text_mode.rs
onek-app/: Cargo.toml
onek-app/src/: main.rs
onek-backend/: Cargo.toml
onek-backend/data/: terrain.ron
onek-backend/src/: fov.rs  game.rs  invariant.rs  main.rs  mutators.rs  objects.rs  old_pov.rs  pov.rs  queries.rs  tests.rs  vec2d.rs
onek-backend/src/snapshots/: onek_backend__tests__bump_deep.snap  onek_backend__tests__bump_move.snap  onek_backend__tests__bump_shallow.snap  onek_backend__tests__bump_wall.snap  onek_backend__tests__from_str.snap  onek_backend__tests__los.snap
onek-invariant/: Cargo.toml
onek-invariant/src/: invariant.rs  main.rs  mutate_state.rs  state.rs  tests.rs
onek-invariant/src/snapshots/: onek_invariant__from_str.snap  onek_invariant__tests__bump_deep.snap  onek_invariant__tests__bump_move.snap  onek_invariant__tests__bump_shallow.snap  onek_invariant__tests__bump_wall.snap  onek_invariant__tests__from_str.snap  onek_invariant__tests__los.snap
onek-logic/: Cargo.toml
onek-logic/src/: bump.rs  main.rs
onek-shared/: Cargo.toml
onek-shared/src/: color.rs  config.rs  ipc.rs  lib.rs  logic_io.rs  messages.rs  object.rs  oid.rs  point.rs  state_io.rs
onek-shared/src/messages/: app.rs
onek-state/: Cargo.toml
onek-state/src/: fov.rs  game.rs  main.rs  mutators.rs  objects.rs  old_pov.rs  pov.rs  queries.rs  vec2d.rs
onek-terminal/: Cargo.toml
onek-terminal/src/: bump.rs  help.rs  main.rs  main_mode.rs  map_view.rs  messages_view.rs  mode.rs  terminal.rs  termion_utils.rs  text_mode.rs  text_view.rs  ui.rs  window.rs
onek-tester/: Cargo.toml
onek-tester/src/: main.rs
onek-tester/src/snapshots/: onek_tester__from_str.snap
onek-types/: Cargo.toml
onek-types/src/: channel_name.rs  edit_count.rs  lib.rs  messages.rs  object.rs  oid.rs  point.rs  size.rs  state_io.rs
onek-types/src/messages/: logic.rs  state.rs
scripts/: sound_prob.py
src/: backend.rs  lib.rs  main.rs  terminal.rs
src/backend/: actions.rs  ai.rs  arena.rs  cell.rs  color.rs  data.rs  event.rs  events.rs  facts.rs  fov.rs  interactions.rs  level.rs  lookup.rs  make.rs  melee.rs  message.rs  model.rs  object.rs  objects.rs  old_pov.rs  persistence.rs  player.rs  player_actions.rs  point.rs  pov.rs  primitives.rs  relation.rs  render.rs  scheduler.rs  sound.rs  store.rs  store2.rs  store_from_str.rs  support.rs  tag.rs  time.rs  type_id.rs  uniques.rs  vec2d.rs
src/backend/data/: char_to_loc.rs  oid_to_obj.rs
src/backend/maps/: arena.txt  start.txt
src/backend/primitives/: color.rs  fov.rs  path_find.rs  point.rs  size.rs  vec2d.rs
src/backend/snapshots/: one_thousand_deaths__backend__player_actions__tests__from_str.snap  one_thousand_deaths__backend__player_actions__tests__move_into_wall.snap  one_thousand_deaths__backend__store__tests__from_str.snap  one_thousand_deaths__backend__store__tests__initial.snap  one_thousand_deaths__backend__store__tests__move_into_door.snap  one_thousand_deaths__backend__store__tests__move_into_shallows.snap  one_thousand_deaths__backend__store__tests__move_into_wall.snap  one_thousand_deaths__backend__store__tests__round_trip.snap
src/backend/support/: make.rs  message.rs  object.rs  tag.rs  time.rs
src/terminal/: color.rs  details_view.rs  examine_mode.rs  examine_window.rs  help.rs  inventory_mode.rs  inventory_view.rs  main_mode.rs  main_window.rs  map.rs  map_view.rs  messages.rs  messages_view.rs  mode.rs  modes.rs  replay_mode.rs  text.rs  text_mode.rs  text_view.rs  ui.rs  window.rs
