[package]
name = "one-thousand-deaths"
version = "0.1.0"                   # also Header::major_version and minor_version
edition = "2021"
default-run = "one-thousand-deaths"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1 # this is noticeably faster and hopefully doesn't slow down compiles much

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
