[package]
name = "onek-invariant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipmpsc = "0.5.1"                          # inter-process channels
onek-shared = { path = "../onek-shared" } # IPC message types

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] } # snapshot testing
