[package]
name = "onek-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraystring = { version = "0.3.0", features = [
    "serde-traits",
] } # copyable fixed width strings
fnv = "1.0.7" # custom hasher that is much more performant for small keys
log = "0.4.20" # standard logging API
ipmpsc = "0.5.1" # inter-process channels
postcard = { version = "1.0.8", features = [
    "alloc",
] } # binary backend for serde
ron = "0.8.1" # rusty config language
serde = { version = "1.0.195", features = ["derive"] } # serialization framework
serde_derive = "1.0.195" # serde derive macros
toml = "0.8.8" # TOML parser
