[package]
name = "onek-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraystring = { version = "0.3.0", features = [
    "serde-traits",
] } # copyable fixed width strings
postcard = { version = "1.0.6", features = [
    "alloc",
] } # binary backend for serde
serde = { version = "1.0.183", features = ["derive"] } # serialization framework
serde_derive = "1.0.183" # serde derive macros
toml = "0.7.6" # TOML parser
